--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.4",
+    "@react-navigation/stack": "^6.0.9",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-camera": "^4.2.1",
+    "react-native-camera-hooks": "^0.5.1",
+    "react-native-fs": "^2.18.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.8.0",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
