--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-camera-hooks": "^0.5.1",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.1.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
