Add thu firebase, chua chay duoc

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:4.2.1")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
 }
 
@@ -35,4 +36,23 @@ allprojects {
         google()
         maven { url 'https://www.jitpack.io' }
     }
+}
+project.ext {
+  set('react-native', [
+    versions: [
+      // Overriding Build/Android SDK Versions
+      android : [
+        minSdk    : 16,
+        targetSdk : 30,
+        compileSdk: 30,
+        buildTools: "30.0.2"
+      ],
+
+      // Overriding Library SDK Versions
+      firebase: [
+        // Override Firebase SDK Version
+        bom           : "28.3.1"
+      ],
+    ],
+  ])
 }
