--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,12 +128,12 @@ android {
 
     defaultConfig {
         applicationId "com.vehicle_inspection"
-        minSdkVersion rootProject.ext.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
          missingDimensionStrategy 'react-native-camera', 'general'
-    }
+        }
     splits {
         abi {
             reset()
@@ -184,9 +184,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
-
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
