--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/stack": "^6.0.9",
+    "firebase": "^9.1.3",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-camera": "^4.2.1",
     "react-native-camera-hooks": "^0.5.1",
+    "react-native-firebase": "^5.6.0",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.1.1",
