--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/stack": "^6.0.9",
+    "firebase": "^9.1.3",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-camera": "^4.2.1",
