--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vehicle_inspection",
-  "version": "0.0.1",
+  "version": "^3.4.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
